# foliSDK

./: .gitignore  .gitmodules  README.md  a.out  bootstrap.sh  build.py  build.sh  build_steps.py  builtin_libraries.cfg  folisdk.rb  i686-folisdk.rb  make_package.sh  setup_prerequisites.sh  subpackages.yml  versions.cfg  x86-folisdk.rb  x86_64-folisdk.rb
.github/workflows/: build.yml
cmake/: i686-strata-folios.cmake  x86_64-strata-folios.cmake
patches/: bzip2-1.0.8.patch  gmp-6.3.0.patch  lz4-1.10.0.patch  ncurses-6.6.patch  nettle-4.0.patch  readline-8.3.patch  zlib-1.3.1.patch  zstd-1.5.7.patch
tests/c/basic_libraries/: main.c
tests/c/libc/: main.c
tests/c/native/: CMakeLists.txt  main.c
tests/cpp/: main.cc
